# agent_framework

./: .gitignore  CODE_STRUCTURE.md  README.md  TODO.md  agent_framework.html  framework-setup-guide.md  pyproject.toml
agent/: __init__.py  app.py  compaction.py  config.py  constants.py  memory.py  skills.py  todo.py  tool_loader.py  tools.py
agent/prompts/: subagent.md  system.md
web/backend/: agent_acl.py  agent_registry.py  agent_wrapper.py  auth.py  config.py  database.py  main.py  models.py
web/backend/migrations/: README.md
web/backend/routers/: admin.py  agents.py  auth.py  chat.py  conversations.py
web/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx
web/frontend/src/components/: AdminAccessPage.tsx  ChartFrame.tsx  ChatInput.tsx  ChatView.tsx  ConversationList.tsx  FeedbackDialog.tsx  Layout.tsx  MessageBubble.tsx  ResizableSidebar.tsx  Sidebar.tsx  TabBar.tsx  TodoPanel.tsx  ToolIndicator.tsx  WelcomeScreen.tsx
web/frontend/src/config/: iconRegistry.ts  pageRegistry.ts  project.ts  projectDefaults.ts  projectOverrides.ts  projectTypes.ts
web/frontend/src/contexts/: AuthContext.tsx
web/frontend/src/hooks/: useAdmin.ts  useWebSocket.ts
web/frontend/src/pages/: defaultPages.ts
web/frontend/src/services/: api.ts  websocket.ts
web/frontend/src/types/: index.ts  pages.ts
